// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parseModelString > custom deletion, addition, and renaming of models 1`] = `
{
  "add": [
    {
      "abilities": {},
      "displayName": undefined,
      "id": "llama",
      "type": "chat",
    },
    {
      "abilities": {},
      "displayName": undefined,
      "id": "claude-2",
      "type": "chat",
    },
    {
      "abilities": {},
      "displayName": "gpt-4-32k",
      "id": "gpt-4-1106-preview",
      "type": "chat",
    },
  ],
  "removeAll": true,
  "removed": [
    "all",
    "gpt-3.5-turbo",
  ],
}
`;

exports[`parseModelString > duplicate naming model 1`] = `
{
  "add": [
    {
      "abilities": {},
      "displayName": "gpt-4-32k",
      "id": "gpt-4-1106-preview",
      "type": "chat",
    },
  ],
  "removeAll": false,
  "removed": [],
}
`;

exports[`parseModelString > empty string model 1`] = `
{
  "add": [
    {
      "abilities": {},
      "displayName": "gpt-4-turbo",
      "id": "gpt-4-1106-preview",
      "type": "chat",
    },
    {
      "abilities": {},
      "displayName": undefined,
      "id": "claude-2",
      "type": "chat",
    },
  ],
  "removeAll": false,
  "removed": [],
}
`;

exports[`parseModelString > only add the model 1`] = `
{
  "add": [
    {
      "abilities": {},
      "displayName": undefined,
      "id": "model1",
      "type": "chat",
    },
    {
      "abilities": {},
      "displayName": undefined,
      "id": "model2",
      "type": "chat",
    },
    {
      "abilities": {},
      "displayName": undefined,
      "id": "model3",
      "type": "chat",
    },
    {
      "abilities": {},
      "displayName": undefined,
      "id": "model4",
      "type": "chat",
    },
  ],
  "removeAll": false,
  "removed": [],
}
`;

exports[`transformToChatModelCards > should merge builtin OpenAI models when re-added by model string 1`] = `
[
  {
    "abilities": {
      "files": true,
      "functionCall": true,
      "reasoning": true,
      "search": true,
      "structuredOutput": true,
      "vision": true,
    },
    "contextWindowTokens": 1050000,
    "description": "GPT-5.6 Sol is OpenAI's frontier model for complex professional work, coding, and agentic workflows with an expanded reasoning range.",
    "displayName": "Sol Custom",
    "enabled": true,
    "id": "gpt-5.6-sol",
    "maxOutput": 128000,
    "pricing": {
      "units": [
        {
          "name": "textInput",
          "rate": 4,
          "strategy": "fixed",
          "unit": "millionTokens",
        },
        {
          "name": "textOutput",
          "rate": 20,
          "strategy": "fixed",
          "unit": "millionTokens",
        },
        {
          "name": "textInput_cacheRead",
          "rate": 0.4,
          "strategy": "fixed",
          "unit": "millionTokens",
        },
      ],
    },
    "providerId": "openai",
    "releasedAt": "2026-07-09",
    "settings": {
      "extendParams": [
        "gpt5ReasoningEffort",
        "textVerbosity",
      ],
      "searchImpl": "params",
    },
    "source": "builtin",
    "type": "chat",
  },
  {
    "abilities": {
      "functionCall": true,
      "reasoning": true,
      "search": true,
      "structuredOutput": true,
      "vision": true,
    },
    "contextWindowTokens": 1050000,
    "description": "GPT-5.5 is OpenAI's frontier model for complex professional work, coding, and agentic workflows with an expanded context window.",
    "displayName": "GPT-5.5 Custom",
    "enabled": true,
    "id": "gpt-5.5",
    "maxOutput": 128000,
    "pricing": {
      "units": [
        {
          "name": "textInput",
          "rate": 5,
          "strategy": "fixed",
          "unit": "millionTokens",
        },
        {
          "name": "textOutput",
          "rate": 30,
          "strategy": "fixed",
          "unit": "millionTokens",
        },
        {
          "name": "textInput_cacheRead",
          "rate": 0.5,
          "strategy": "fixed",
          "unit": "millionTokens",
        },
      ],
    },
    "providerId": "openai",
    "releasedAt": "2026-04-23",
    "settings": {
      "extendParams": [
        "gpt5ReasoningEffort",
        "textVerbosity",
      ],
      "searchImpl": "params",
    },
    "source": "builtin",
    "type": "chat",
  },
]
`;
